--- a/js/src/dev.web3.html
+++ b/js/src/dev.web3.html
@@ -7,6 +7,6 @@
     <title>dev::Web3</title>
   </head>
   <body>
-    <script src="web3.js"></script>
+    <script src="/parity-utils/web3.js"></script>
   </body>
 </html>
